--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<label for="userInput">Please enter a number:</label>
 					<input id="userInput" type="text" />
 				</div>
-				<button type="submit" class="btn btn-success">Submit!</button>
+				<button type="submit" class="btn btn-warning">Sort</button>
 			</form>
 
 			<p class="userResults">Your results are:</p>
