Move the functionality to create dynamic length arrays to its own function

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Hello World</title>
 		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
+		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 		<script src="js/jquery-3.5.1.js"></script>
 		<script src="js/scripts.js"></script>
 	</head>
@@ -19,6 +20,8 @@
 						<button type="submit" class="btn btn-warning">Sort</button>
 					</form>
 				</div>
+
+				<div id="chartContainer" style="height: 370px; width: 100%"></div>
 
 				<div class="output col-9">
 					<p class="userResults"></p>
